part3/3.4/manifests/deployment-log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  labels:
    app: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
      containers:
        - name: writer
          image: gcr.io/dwk-gke-506208/log-output:3.4
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
        - name: reader
          image: gcr.io/dwk-gke-506208/log-output:3.4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
