part3/3.4/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  labels:
    app: ping-pong
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  labels:
    app: log-output
spec:
  type: ClusterIP
  selector:
    app: log-output
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
